--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,10 +11,6 @@ body {
   display: none;
 }
 
-.clearfix {
-  overflow: hidden;
-}
-
 .allow-user-select {
   -webkit-touch-callout: initial;
   -webkit-user-select: initial;
